--- a/front/assets/global-styles/reset.scss
+++ b/front/assets/global-styles/reset.scss
@@ -25,6 +25,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
   line-height: 1;
+  background: rgb(240, 240, 240);
 }
 ol, ul {
   list-style: none;
