--- a/front/assets/global-styles/main.scss
+++ b/front/assets/global-styles/main.scss
@@ -1,67 +1,46 @@
+@import 'fonts', 'ui', 'vars';
+
 .app {
-  display: block;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+
   &__menu {
-    height: 75px;
-    position: sticky;
-    background-color: #feebef;
-    border-bottom: 1px solid rgba(0,0,0,.03);
+    height: 100vh;
+    width: 300px;
+    border-right: .5px solid $outlineColor;
   }
-  &__menu:before {
-    pointer-events: none;
-    content: '';
-    z-index: 3;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background: -webkit-gradient(linear,left top,right top,color-stop(36.94%,#feebef),color-stop(68.31%,rgba(235,254,237,0)));
-    background: linear-gradient(90deg,#feebef 36.94%,rgba(235,254,237,0) 68.31%);
-  }
-  &__menu:after {
-    pointer-events: none;
-    content: '';
-    z-index: 2;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background: -webkit-gradient(linear,left top,right top,from(#b2eb38),color-stop(65.73%,#94f1da),to(#9bd0fe)),#fff;
-    background: linear-gradient(90deg,#b2eb38 0,#94f1da 65.73%,#9bd0fe 100%),#fff;
-  }
-  &__main {
+
+  &__content {
+    width: 600px;
     display: flex;
-    justify-content: center;
-    position: relative;
-    &__content {
-      flex: 1 0 auto;
-      max-width: 1200px;
-      background: red;
+    flex-direction: column;
+
+    &__title {
+      height: 40px;
+      border-bottom: .5px solid $outlineColor;
+      display: flex;
+      align-items: center;
+      padding: 10px;
     }
-    &__sidebar-menu {
-      width: 300px;
-      height: calc(100vh - 75px);
-      border-right: 1px solid rgba(0,0,0,.07);
-      position: absolute;
-      left: -300px;
-      top: 0;
-      transition: .5s ease-in-out;
+
+    &__main {
+      padding: 10px;
     }
-    &__right-sidebar-menu {
-      width: 300px;
-      height: calc(100vh - 75px);
-      border-left: 1px solid rgba(0,0,0,.07);
-      position: absolute;
-      right: -300px;
-      top: 0;
-      transition: .5s ease-in-out;
-    }
-    .active-left-sidebar {
-      left: 0;
-    }
-    .active-right-sidebar {
-      right: 0;
-    }
+  }
+
+  &__recommended {
+    height: 100vh;
+    width: 300px;
+    border-left: .5px solid $outlineColor;
   }
 }
+
+.mr-10 {
+  margin-right: 10px;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
