--- a/front/assets/global-styles/main.scss
+++ b/front/assets/global-styles/main.scss
@@ -21,16 +21,20 @@
     flex-direction: column;
     border-right: .5px solid $outlineColor;
     border-left: .5px solid $outlineColor;
+    position: relative;
     &__title {
-      height: 40px;
+      width: 600px;
+      height: 60px;
       border-bottom: .5px solid $outlineColor;
       display: flex;
       align-items: center;
-      padding: 10px;
+      position: fixed;
+      background: rgb(240, 240, 240);
     }
 
     &__main {
       padding: 10px;
+      margin-top: 60px;
     }
   }
 
@@ -47,6 +51,14 @@
 
 .mr-10 {
   margin-right: 10px;
+}
+
+.pl-10 {
+  padding-left: 10px;
+}
+
+.pr-10 {
+  padding-right: 10px;
 }
 
 .cursor-pointer {
