--- a/front/assets/global-styles/main.scss
+++ b/front/assets/global-styles/main.scss
@@ -30,10 +30,13 @@
       align-items: center;
       position: fixed;
       background: rgb(240, 240, 240);
+      .arrow-back {
+        width: 50px;
+        text-align: center;
+      }
     }
 
     &__main {
-      padding: 10px;
       margin-top: 60px;
     }
   }
