--- a/front/assets/global-styles/main.scss
+++ b/front/assets/global-styles/main.scss
@@ -68,3 +68,15 @@
   cursor: pointer;
 }
 
+.color-silver {
+  color: $secondaryColor;
+}
+
+.text-bolder {
+  font-weight: bolder;
+}
+
+
+.mb-10 {
+  margin-bottom: 10px;
+}
