--- a/front/assets/global-styles/_ui.scss
+++ b/front/assets/global-styles/_ui.scss
@@ -169,4 +169,21 @@ button:focus {
   outline: none;
 }
 
+.ui-input {
+  padding: 10px;
+  min-width: 220px;
+  border: 0;
+  color: $accentColor;
+  caret-color: $accentColor;
+  transition: .2s ease-in-out;
+  -webkit-box-shadow: 0px 3px 5px 0px rgba(168,168,168,0.3);
+  -moz-box-shadow: 0px 3px 5px 0px rgba(168,168,168,0.3);
+  box-shadow: 0px 3px 5px 0px rgba(168,168,168,0.3);
+}
+
+input:focus {
+  box-shadow: none;
+  outline: none;
+}
+
 
